
package com.minsait.onesait.platform.automl.vision.domain;


public enum AutoMLEnvironment {

    LOCAL,
    REMOTE

}
