
package com.minsait.onesait.platform.automl.vision.domain;


public interface AutoMLModel {

    AutoMLEnvironment getEnvironment();
    AutoMLPlatform getPlatform();

}
