
package com.minsait.onesait.platform.automl.vision.domain;


public enum AutoMLPlatform {

    GOOGLE

}
